seperated admin/developer resume and cover letters

--- a/softwareDev/pratham-cover-letter-openfont.tex
+++ b/softwareDev/pratham-cover-letter-openfont.tex
@@ -56,14 +56,14 @@
 \sectionsep
 \sectionsep
 
-\descript{TRIUMF}
-\location{4004 Wesbrook Mall,} 
-\location{Vancouver, BC V6T 2A3} 
+\descript{Unity Technologies}
+\location{1751 Rue Richardson suite 3.500,}
+\location{Montreal, Quebec H3K 1G6} 
 
 \sectionsep
 \sectionsep
 
-\descript{RE: IT Support Specialist}
+\descript{RE: Software QA Developer, PC Creator}
 
 \sectionsep
 \sectionsep
@@ -72,20 +72,20 @@
 
 \sectionsep
 
-\location{The 9-year-old Pratham had one dream: to go to space. While I was fascinated by the innovations in the field of physics, I found my passion in computers due to the creative freedom that they granted, and I pursued further education to learn more about them. I am thrilled to apply at TRIUMF, since not only does it allow me to be a part of world's leading laboratories for particle and nuclear physics and accelerator-based science, but it also allows me to contribute in a  inclusive culture that encourages, supports, and celebrates diversity and community effort to make the world a better place.}
+\location{The 9-year-old Pratham had one dream: to go to space. While I was fascinated by the innovations in the field of physics, I found my passion in computers due to the creative freedom that they granted, and I pursued further education to learn more about them. Today, I am thrilled to apply at Unity, since not only does it allow me to be a part of a world leader in interactive experiences impacting billions of users, but it also allows me to inclusively contribute alongside a team of experts with values that align with my goals, allowing me to turn dreams into shared experiences.}
 
 \sectionsep
 
 \begin{tightemize}
     \item \location{As a recent graduate from The Thompson Rivers in Computing Science I have experience in writing code, testing applications, and debugging software from the knowledge acquired in my coursework.} 
-    \item \location{I also have experience working with various programming languages, such as C\#, Java, and Python. I enjoy problem solving and keep my skills sharp by practicing challenging questions.}
+    \item \location{I also have experience working with various programming languages, such as C\#, Java, and Python. I enjoy problem solving and keep my skills sharp by practicing challenging questions on LeetCode.}
     \item \location{In addition, I have a strong understanding of software development methodologies, such as MVC Framework, Agile, and Waterfall from the projects that I led. }
     \item \location{Having led multiple group projects I understand what it means to lead people, and have developed my skills in communication, strategic-planning, decision making, analytical thinking, and delegation of tasks. }
 \end{tightemize}
 
 \sectionsep
 
-\location{I am a motivated individual who is always eager to learn new things. My experience and skills have allowed me to develop a keen eye for detail, troubleshooting software and hardware issue, and  communication skills that is essential for IT Support. I am confident that I could be a valuable asset to your team and contribute to the success of your company. I look forward to discussing my qualifications and experience with you further. Thank you for your time and consideration.} 
+\location{I am a motivated individual who is always eager to learn new things. My experience and skills have allowed me to develop a keen eye for detail, which is essential for quality assurance. I am confident that I could be a valuable asset to your team and contribute to the success of your company. I look forward to discussing my qualifications and experience with you further. Thank you for your time and consideration.} 
 \sectionsep
 
 \location{Sincerely,} 
