--- a/sysAdmin/pratham_SysAdmin_resume-openfont.tex
+++ b/sysAdmin/pratham_SysAdmin_resume-openfont.tex
@@ -49,8 +49,8 @@
 %     TITLE NAME
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\namesection{Pratham}{Goyal}{ \urlstyle{same}\href{http://prathamgoyal.me}{prathamgoyal.me}\\\
-\href{mailto:goyalp09@pm.me}{goyalp09@pm.me} | +1 250.879.3123
+\namesection{Pratham}{Goyal}{ \urlstyle{same}\href{https://prathamgoyal.com}{prathamgoyal.com}\\\
+\href{mailto:contact@prathamgoyal}{contact@prathamgoyal.com} | +1 250.879.3123
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -67,13 +67,8 @@
 
 \section{Education}
 \subsection{Thompson Rivers \\ University} 
-\descript{Diploma in Computer Science}
+\descript{Diploma in Computing~~ Science}
 \location{Grad. Sept 2022 | Kamloops, BC}
-\sectionsep
-
-\subsection{Rukhmani Devi Sr.}
-\subsection{Secondary Collegiate}
-\location{Grad. May 2017 |  Patiala, India}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -81,32 +76,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links} 
-Github:// \href{https://https://github.com/Pratham9}{\bf Pratham9} \\
 LinkedIn://  \href{https://www.linkedin.com/in/prathamgoyal}{\bf prathamgoyal} \\
+Github:// \href{https://github.com/Pratham9}{\bf Pratham9} \\
 Twitter: // \href{https://twitter.com/GoreKehnePerry}{\bf goyalperry}
 \sectionsep
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     COURSEWORK
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Coursework}
-\subsection{Undergraduate}
-Data Structures and Algorithms \\
-Software Architecture \& Design\\
-Game Design \& Development* \\
-Advanced Web Design \& Programming* \\
-Mobile App Development* \\
-Human-Computer Interaction \\
-Database Systems \\
-Career Management \\
-{\footnotesize \textit{\textbf{(Teaching Asst *) }}} \\
-
-\sectionsep
-\subsection{Post-Graduate}
-Complete C\# Masterclass - Denis Panjuta \\
-Solution Architect Learning Plan - AWS* \\
-{\footnotesize \textit{\textbf{(In Progress *) }}} \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
@@ -114,13 +89,28 @@ Solution Architect Learning Plan - AWS* \\
 
 \section{Skills}
 \location{Expert:}
-C\# \textbullet{} PowerShell \textbullet{} Active Directories \\
- \textbullet{} ITSM Administration \textbullet{} N-able RMM 
- \textbullet{} Microsoft 365 \textbullet{} Googling \\ 
+Active Directory \textbullet{} Azure AD \textbullet{} PowerShell \\
+\textbullet{} ITSM Administration \textbullet{} Microsoft 365 \textbullet{}\\ 
+ FreshService \textbullet{} Apple Configurator 2 \\
+\textbullet{} Intune MDM \textbullet{} Meraki Cloud Dashboard 
+ SharePoint Online \textbullet{} Exchange Online \\
+\ \textbullet{} AI Integration (ChatGPT, Copilot, Perplexity, etc.)\\
 \location{Confident:}
-Python \textbullet{} PHP \textbullet{} MySQL \textbullet{} JavaScript \\ \textbullet{} PowerApps \textbullet{} Server Manager \\
+C\# \textbullet{} Python \textbullet{} PHP \textbullet{} MySQL \textbullet{} JavaScript  \\
+\textbullet{} PowerApps \textbullet{} Server Manager \textbullet{} \\
+Datto RMM \textbullet{} Autotask PSA \textbullet{} IT Glue \\ 
+\textbullet{} Office Apps \\
 \location{Familiar:}
-Sage \textbullet{} HCSS Apps \textbullet{} MS Project \textbullet{} Excede
+Sage \textbullet{} Networks (Sophos, Meraki, Cisco AnyConnect, OpenVPN) \textbullet{} MDT \textbullet{} RDS \\
+\textbullet{} Basic Understanding of Machine Learning Concepts \textbullet{} MS Project \\
+\sectionsep
+
+\section{Additional Info}
+\textbullet{} Volunteered for United Way Campaign and helped paint the local Food Hub Project Storefront. \\
+\textbullet{} Organized the Global Game Jam for the 3rd time at TRU which involved getting funding, {\bf event planning}, and execution. \\
+\textbullet{} Promoted to {\bf President} of the {\bf Game Development Club} and set up a board to advance club activities. \\
+\textbullet{} Currently preparing for {\bf AWS Certified Developer} Associate. \\
+\textbullet{} Actively learning and applying AI technologies, with a focus on ChatGPT and prompt engineering, to develop innovative solutions and automate processes. This engagement enhances efficiency, creativity, and the ability to tailor AI responses in technical projects.
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -138,14 +128,27 @@ Sage \textbullet{} HCSS Apps \textbullet{} MS Project \textbullet{} Excede
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
+
+\subsection{TLC Solutions}
+\descript{Service Technician}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item Delivered frontline technical support, achieving top-tier problem-solving effectiveness and customer satisfaction, evidenced by a {\bf 100\% Kill Rate} and consistently positive CSAT feedback.
+\item Orchestrated iPad setup and management using {\bf Mac, Apple Configurator 2,} and {\bf Intune MDM;} streamlined provisioning and enforced device restrictions, significantly enhancing operational efficiency and security.
+\item Developed and executed {\bf PowerShell scripts} for critical security and administrative tasks, doubling efficiency in administrative operations and enhancing the organization's security posture.
+\item Improved response times by over {\bf 50\%}, demonstrating a steadfast commitment to enhancing service responsiveness and client communication.
+\end{tightemize}
+\sectionsep
+
 \subsection{The Dawson Group}
 \descript{Systems Administrator \light{| Jan 2022 - Sept 2022 | Kamloops, BC}} 
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Boosted team productivity {\bf saving 200 hours} a year via automation of IT onboards using FreshService features, {\bf PowerShell}, and {\bf Python}. 
-\item Implemented a data manipulation pipeline and cleanup query using {\bf Power Query saving 4 hours each week} for the Payroll team.
 \item Piloted an employee onboarding system which on implementation will be a better experience for support services and new employees, made Project Charter, {\bf Documentation}, and got Stakeholder acceptance via Showcase of a {\bf Technical Demo}.
-\item Conducted phishing simulation and set up {\bf security awareness training} for vulnerable employees, leading to a decrease in phish-prone users by {\bf 85\%}.
+\item Streamlined ITSM system integration and boosted team productivity by automating IT onboards with {\bf PowerShell scripting}, FreshService features, and {\bf Python}, effectively resolving bugs and ensuring a smooth transition to production with optimized code. This initiative saved over {\bf 200 hours} annually.
+\item Implemented a data manipulation pipeline and cleanup query using {\bf Power Query saving 4 hours each week} for the Payroll team.
+\item Led the {\bf Employee Onboarding Automation} project, significantly enhancing the onboarding process. Utilized {\bf PowerShell, FreshService, Active Directory,} and {\bf Azure AD} to automate account creation within 60 seconds post-approval, achieving {\bf 30-minute savings} per onboard and reducing errors.
+
 \end{tightemize}
 \sectionsep
 
@@ -160,33 +163,9 @@ Sage \textbullet{} HCSS Apps \textbullet{} MS Project \textbullet{} Excede
 %     Technical Projects
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Technical Projects}
-\subsection{Employee Onboarding Automation}
-\descript{Design \& Development Lead \light{ | Nov 2021 – July 2022}}
-Configured an automation such that when managers submit information for onboarding via ticketing system, the system validates information and wait for approval by IT Admin, after approval a user account is created automatically within 60 seconds and synced with AD.
-\begin{tightemize}
-    \item[] {\bf Tools}: PowerShell, Excel, FreshService Orchestration Features, Active Directory, Azure Active Directory, Windows Server 2019, Remote Desktop. \\
-    \item Involved {\bf PowerShell scripting}, connecting with the ITSM system on a test server, recording, resolving and reporting bugs to the developers. 
-    \item Validated project in test environment and transferred to a production environment, with documentation and cleaner code.
-    \item Resulted in {\bf savings of 30 minutes} per onboard and elimination of human-error.
-\end{tightemize}
-
 \sectionsep
 
 \end{minipage} 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Additional Information
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Additional Information}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-    \item Volunteered for United Way Campaign and helped paint the local Food Hub Project Storefront.
-    \item Organized the Global Game Jam for the 3rd time at TRU which involved getting funding, {\bf event planning}, and execution.
-    \item Promoted to {\bf President} of the {\bf Game Development Club} and set up a board to advance club activities.
-    \item Currently preparing for {\bf AWS Solutions Architect}.
-\end{tightemize}
 
 \end{document}
 \documentclass[]{article}
